got update working for people, started skeleton of create

--- a/partials/people.html
+++ b/partials/people.html
@@ -21,6 +21,8 @@
 	</p>
 	
 	<p>Show archived records: <input type="checkbox" data-ng-model="showArchived" data-ng-true-value="1" data-ng-false-value="0"></p>
+	
+	<p><a href="#/people/new">Create New</a></p>
 </div>
 
 <table>
